Doc, autozoom to avoid horizontal scroll

--- a/doc/styles/content.css
+++ b/doc/styles/content.css
@@ -1,6 +1,7 @@
 html { 
   behavior:sticky-scroll; /* keep position of viewed element */
   overflow:scroll-indicator;
+  aspect: AutoZoom url(autozoom.tis);
 }
 
 body 
